--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="half-side">
             <h1><span class="font-highlight">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
-            <h1>With Food Network</h1>
+            <h1>With Food</h1>
             <p>
                 Imagine you don't need a diet because we provide healthy and delicious food for you!
             </p>
